--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,42 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+}
+
+repositories {
+    mavenCentral()
+}
+
+kotlin {
+    jvmToolchain(17)
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = '1.8'
+        apiVersion = '1.8'
+        languageVersion = '1.8'
+    }
+}
+
+sourceSets {
+    main {
+        kotlin {
+            srcDirs = ['src/main/kotlin']
+        }
+        java {
+            srcDirs = ['src/main/java']
+        }
+    }
 }
 
 java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-    
-    // Removed toolchain requirement to use current Java version
-    // with compatibility settings
 }
 
 application {
@@ -23,6 +51,8 @@ jar {
             'Application-Name': 'vNES'
         )
     }
+    
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     
     from {
         configurations.runtimeClasspath.collect { 
