--- a/vnes-compose-ui/build.gradle
+++ b/vnes-compose-ui/build.gradle
@@ -22,6 +22,13 @@ dependencies {
     implementation compose.foundation
     implementation compose.runtime
 
+    // Skiko dependency for hardware-accelerated rendering
+    implementation "org.jetbrains.skiko:skiko:0.7.90"
+
+    // Add platform-specific Skiko dependencies to ensure native libraries are included
+    implementation "org.jetbrains.skiko:skiko-awt-runtime-macos-x64:0.7.85"
+    implementation "org.jetbrains.skiko:skiko-awt-runtime-macos-arm64:0.7.85"
+
     testImplementation 'junit:junit:4.13.2'
 }
 
