--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ rootProject.name = 'vNES'
 include 'vnes-emulator'
 include 'vnes-applet-ui'
 include 'vnes-skiko-ui'
+include 'vnes-terminal-ui'
 
 // Define a property to control whether to include the Compose UI module
 // This can be set via command line: ./gradlew -PincludeComposeUI=true
