vnes.applet package migrated to knes

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 
 dependencies {
     implementation project(':vnes-emulator')
-    implementation project(':vnes-applet-ui')
+    implementation project(':knes-applet-ui')
     implementation project(':vnes-skiko-ui')
 
     // Only include the Compose UI module if Java 11 or higher is available
