--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,7 @@ pluginManagement {
 rootProject.name = 'vNES'
 include 'vnes-emulator'
 include 'knes-applet-ui'
-include 'vnes-skiko-ui'
+include 'knes-skiko-ui'
 include 'vnes-terminal-ui'
 
 // Define a property to control whether to include the Compose UI module
