--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 dependencies {
     implementation project(':vnes-emulator')
     implementation project(':knes-applet-ui')
-    implementation project(':vnes-skiko-ui')
+    implementation project(':knes-skiko-ui')
 
     // Only include the Compose UI module if Java 11 or higher is available
     String javaVersion = System.getProperty("java.version")
