--- a/knes-compose-ui/build.gradle
+++ b/knes-compose-ui/build.gradle
@@ -71,7 +71,7 @@ jar {
     manifest {
         attributes(
             'Main-Class': 'knes.compose.ComposeMainKt',
-            'Application-Name': 'vNES Compose'
+            'Application-Name': 'kNES Compose'
         )
     }
 
