--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,20 @@ include 'knes-emulator'
 include 'knes-applet-ui'
 include 'knes-skiko-ui'
 include 'knes-terminal-ui'
+include 'knes-controllers'
+
+/*
+ *
+ *  * Copyright (C) 2025 Artur Skowroński
+ *  * This file is part of kNES, a fork of vNES (GPLv3) rewritten in Kotlin.
+ *  *
+ *  * vNES was originally developed by Brian F. R. (bfirsh) and released under the GPL-3.0 license.
+ *  * This project is a reimplementation and extension of that work.
+ *  *
+ *  * kNES is licensed under the GNU General Public License v3.0.
+ *  * See the LICENSE file for more details.
+ *
+ */
 
 // Define a property to control whether to include the Compose UI module
 // This can be set via command line: ./gradlew -PincludeComposeUI=true
