--- a/knes-terminal-ui/build.gradle
+++ b/knes-terminal-ui/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     implementation project(':knes-emulator')
+    implementation project(':knes-controllers')
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     
     // Terminal UI doesn't need any special rendering libraries
