--- a/knes-applet-ui/build.gradle
+++ b/knes-applet-ui/build.gradle
@@ -1,3 +1,16 @@
+/*
+ *
+ *  * Copyright (C) 2025 Artur Skowroński
+ *  * This file is part of kNES, a fork of vNES (GPLv3) rewritten in Kotlin.
+ *  *
+ *  * vNES was originally developed by Brian F. R. (bfirsh) and released under the GPL-3.0 license.
+ *  * This project is a reimplementation and extension of that work.
+ *  *
+ *  * kNES is licensed under the GNU General Public License v3.0.
+ *  * See the LICENSE file for more details.
+ *
+ */
+
 plugins {
     id 'java'
     id 'application'
@@ -9,6 +22,7 @@ repositories {
 
 dependencies {
     implementation project(':knes-emulator')
+    implementation project(':knes-controllers')
     testImplementation 'junit:junit:4.13.2'
 }
 
