--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,19 @@
+#
+# /*
+#  * Copyright (C) 2025 Artur Skowro?ski
+#  * This file is part of kNES, a fork of vNES (GPLv3) rewritten in Kotlin.
+#  *
+#  * vNES was originally developed by Brian F. R. (bfirsh) and released under the GPL-3.0 license.
+#  * This project is a reimplementation and extension of that work.
+#  *
+#  * kNES is licensed under the GNU General Public License v3.0.
+#  * See the LICENSE file for more details.
+#  */
+#
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.12-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.8-all.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
