--- a/knes-compose-ui/build.gradle
+++ b/knes-compose-ui/build.gradle
@@ -14,7 +14,8 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'application'
-    id 'org.jetbrains.compose' version '1.4.3'
+    id 'org.jetbrains.compose' version '1.6.10'
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.0.0'
 }
 
 repositories {
@@ -47,23 +48,23 @@ dependencies {
 }
 
 kotlin {
-    jvmToolchain(8)
+    jvmToolchain(11)
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
-        jvmTarget = '1.8'
-        apiVersion = '1.8'
-        languageVersion = '1.8'
+        jvmTarget = '11'
+        apiVersion = '2.0'
+        languageVersion = '2.0'
     }
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 sourceSets {
