--- a/knes-compose-ui/build.gradle
+++ b/knes-compose-ui/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation compose.ui
     implementation compose.foundation
     implementation compose.runtime
+    implementation compose.components.resources
 
     // Skiko dependency for hardware-accelerated rendering
     implementation "org.jetbrains.skiko:skiko:0.7.90"
